k8s_solution/api-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: devops-advisor-svc
  namespace: devops-advisor
  labels:
    app: devops-advisor
spec:
  type: ClusterIP
  selector:
    app: devops-advisor
  ports:
    - name: http
      port: 80
      targetPort: 5001
