k8s_solution/db-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
  namespace: devops-advisor
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
